--- a/python-leccion12-gestion-ficheros.ipynb
+++ b/python-leccion12-gestion-ficheros.ipynb
@@ -42,48 +42,66 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def funcion():\n",
-    "    print(os.getcwd())"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Cree una carpeta que se llame \"aprendiendo-ficheros\". ⚠️ Tened en cuenta que si la carpeta ya existe no la podemos crear, nos devolverá un error. Incluye en la función un programa que evite que nos de un error si la carpeta ya existe."
+    "- Cree una carpeta que se llame \"aprendiendo-ficheros\". ⚠️ Tened en cuenta que si la carpeta ya existe no la podemos crear, nos devolverá un error. Incluye en la función un programa que evite que nos de un error si la carpeta ya existe.\n",
+    "\n",
+    "- Cree otra carpeta que se llame \"datos\" dentro de la carpeta \"aprendiendo-ficheros\". En esta carpeta \"datos\" guardaremos el fichero \"saludo.txt\" que os habéis descargado."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def funcion():\n",
+    "def folder(folder1, folder2, new_folder):\n",
     "    \n",
     "    print(os.getcwd())\n",
+    "    contenido_carpeta = os.listdir()\n",
+    "    print(contenido_carpeta)\n",
     "    \n",
-    "    try:\n",
+    "    if folder1 in contenido_carpeta:\n",
+    "        print(f\"La carpeta {folder1} ya existe.\")\n",
+    "    else: \n",
+    "        os.mkdir(folder1)\n",
+    "        print(f\"La carpeta {folder1} ha sido creada.\")\n",
+    "        os.mkdir(f\"{folder1}/{folder2}\")\n",
+    "        print(f\"La carpeta {folder2} ha sido creada.\")\n",
+    "        print(os.getcwd())\n",
+    "        os.rename(folder1, new_folder)\n",
+    "        print(f\"Tu carpeta ahora se llama {new_folder}.\")\n",
+    "        os.chdir(f\"{new_folder}/{folder2}\")\n",
+    "        print(\"Estas trabajando en esta ruta:\", os.getcwd())\n",
     "\n",
-    "        os.mkdir(\"aprendiendo-ficheros\")\n",
-    "    \n",
-    "    except:\n",
     "\n",
-    "        print(\"Esta carpeta ya existe\")\n"
+    "\n",
+    "    \n"
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 47,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/usuario/Escritorio/Adalab/modulo_1/pair_programming/promo-d-da-modulo1-sprint2-anabelen-ana-lidya/promo-d-da-modulo1-sprint2-anabelen-ana-lidya\n",
+      "['python-leccion8-funciones-intro.ipynb', 'python-leccion11-expresiones-regulares.ipynb', '.gitignore', 'mysql-leccion12-consultas-en-multiples-tablas-4.sql', 'README.md', 'mysql-leccion10-consultas-en-multiples-tablas-2.sql', 'mysql-leccion9-consultas-en-multiples-tablas-1.sql', 'saludo.txt', '.git', '.ipynb_checkpoints', 'python-leccion12-gestion-ficheros.ipynb', 'python-leccion10-clases.ipynb', 'mysql-leccion11-consultas-en-multiples-tablas-3.sql', 'python-leccion9-funciones-argumentos.ipynb', 'mysql-leccion8-consultas-avanzadas-2.sql', 'email.txt']\n",
+      "La carpeta aprendiendo_ficheros ha sido creada.\n",
+      "La carpeta datos ha sido creada.\n",
+      "/home/usuario/Escritorio/Adalab/modulo_1/pair_programming/promo-d-da-modulo1-sprint2-anabelen-ana-lidya/promo-d-da-modulo1-sprint2-anabelen-ana-lidya\n",
+      "Tu carpeta ahora se llama primera_toma_contacto.\n",
+      "Estas trabajando en esta ruta: /home/usuario/Escritorio/Adalab/modulo_1/pair_programming/promo-d-da-modulo1-sprint2-anabelen-ana-lidya/promo-d-da-modulo1-sprint2-anabelen-ana-lidya/primera_toma_contacto/datos\n"
+     ]
+    }
+   ],
    "source": [
-    "- Cree otra carpeta que se llame \"datos\" dentro de la carpeta \"aprendiendo-ficheros\". En esta carpeta \"datos\" guardaremos el fichero \"saludo.txt\" que os habéis descargado."
+    "folder(\"aprendiendo_ficheros\", \"datos\", \"primera_toma_contacto\")"
    ]
   },
   {
