ejercicio python terminado

--- a/python-leccion14-python+sql2.ipynb
+++ b/python-leccion14-python+sql2.ipynb
@@ -64,6 +64,190 @@
     "        - Foreign Key\n",
     "        - References"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CMySQLCursor: CREATE DATABASE mi_primerita_BBDD_Python\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mysql.connector\n",
+    "\n",
+    "cnx = mysql.connector.connect(user='root', password='AlumnaAdalab',\n",
+    "                              host='127.0.0.1')\n",
+    "\n",
+    "\n",
+    "mycursor = cnx.cursor()\n",
+    "try:\n",
+    "    mycursor.execute(\"CREATE DATABASE mi_primerita_BBDD_Python\")\n",
+    "    print(mycursor)\n",
+    "except mysql.connector.Error as err:\n",
+    "    print(err)\n",
+    "    print(\"Error Code:\", err.errno)\n",
+    "    print(\"SQLSTATE\", err.sqlstate)\n",
+    "    print(\"Message\", err.msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_tables(contraseña, query):\n",
+    "    \"\"\"Esta función sirve para crear tablas en la database mi_primerita_BBDD_Python, recibe dos parámetros:\n",
+    "        - la password del servidor de MySQL en formato string\n",
+    "        - la query en formato string\n",
+    "    \"\"\"\n",
+    "\n",
+    "    cnx = mysql.connector.connect(user='root', password= contraseña,\n",
+    "                              host='127.0.0.1', database='mi_primerita_BBDD_Python')\n",
+    "\n",
+    "\n",
+    "    mycursor = cnx.cursor()\n",
+    "    try:\n",
+    "        mycursor.execute(query)\n",
+    "        print(mycursor)\n",
+    "    except mysql.connector.Error as err:\n",
+    "        print(err)\n",
+    "        print(\"Error Code:\", err.errno)\n",
+    "        print(\"SQLSTATE\", err.sqlstate)\n",
+    "        print(\"Message\", err.msg)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CMySQLCursor: CREATE TABLE zapatillas\n",
+      "                ..\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "create_tables(\"AlumnaAdalab\", \"\"\"CREATE TABLE zapatillas\n",
+    "                                                    (id_zapatilla INT NOT NULL AUTO_INCREMENT,\n",
+    "                                                    modelo VARCHAR(45) NOT NULL,\n",
+    "                                                    color VARCHAR(45) NOT NULL,\n",
+    "                                                    talla INT NOT NULL,\n",
+    "                                                    PRIMARY KEY (id_zapatilla))\n",
+    "                                                    \"\"\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CMySQLCursor: CREATE TABLE clientes (\n",
+      "                ..\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_tables(\"AlumnaAdalab\", \"\"\"CREATE TABLE clientes (\n",
+    "                                                        id_cliente INT NOT NULL AUTO_INCREMENT,\n",
+    "                                                        nombre VARCHAR(45) NOT NULL,\n",
+    "                                                        numero_telefono INT(9) NOT NULL,\n",
+    "                                                        email VARCHAR(45) NOT NULL,\n",
+    "                                                        direccion VARCHAR(45) NOT NULL,\n",
+    "                                                        ciudad VARCHAR(45) DEFAULT NULL,\n",
+    "                                                        provincia VARCHAR(45) NOT NULL,\n",
+    "                                                        pais VARCHAR(45) NOT NULL,\n",
+    "                                                        codigo_postal INT (9) NOT NULL,\n",
+    "                                                        PRIMARY KEY (id_cliente))\n",
+    "                                                        \"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CMySQLCursor: CREATE TABLE empleados(\n",
+      "                ..\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_tables(\"AlumnaAdalab\", \"\"\"CREATE TABLE empleados(\n",
+    "                                                        id_empleado INT NOT NULL AUTO_INCREMENT,\n",
+    "                                                        nombre VARCHAR(45) NOT NULL,\n",
+    "                                                        tienda VARCHAR(45) NOT NULL,\n",
+    "                                                        salario FLOAT,\n",
+    "                                                        fecha_incorporacion DATE NOT NULL,\n",
+    "                                                        PRIMARY KEY (id_empleado)\n",
+    "                                                        )\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CMySQLCursor: CREATE TABLE facturas (\n",
+      "                ..\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_tables(\"AlumnaAdalab\", \"\"\"CREATE TABLE facturas (\n",
+    "                                                        id_factura INT NOT NULL AUTO_INCREMENT,\n",
+    "                                                        id_empleado INT NOT NULL,\n",
+    "                                                        id_cliente INT NOT NULL,\n",
+    "                                                        id_zapatilla INT NOT NULL,\n",
+    "                                                        fecha DATE NOT NULL,\n",
+    "                                                        total FLOAT NOT NULL,\n",
+    "                                                        PRIMARY KEY (id_factura),\n",
+    "                                                        CONSTRAINT `fk_facturas_cliente`\n",
+    "                                                            FOREIGN KEY (id_cliente) \n",
+    "                                                            REFERENCES clientes (id_cliente) \n",
+    "                                                            ON DELETE CASCADE ON UPDATE CASCADE,\n",
+    "                                                        CONSTRAINT `fk_facturas_empleados` \n",
+    "                                                            FOREIGN KEY (id_empleado) \n",
+    "                                                            REFERENCES empleados (id_empleado) \n",
+    "                                                            ON DELETE CASCADE ON UPDATE CASCADE,\n",
+    "                                                        CONSTRAINT `fk_facturas_zapatillas` \n",
+    "                                                            FOREIGN KEY (id_zapatilla) \n",
+    "                                                            REFERENCES zapatillas (id_zapatilla) \n",
+    "                                                            ON DELETE CASCADE ON UPDATE CASCADE\n",
+    "                                                        )\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnx.close()"
+   ]
   }
  ],
  "metadata": {
@@ -82,7 +266,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
