--- a/python/python-leccion13-python+sql-1.ipynb
+++ b/python/python-leccion13-python+sql-1.ipynb
@@ -5,8 +5,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pair programming\n",
-    "Es el momento de dejar de usar la interface de Workbench y empezar a usar SQL desde Python!\n"
+    "# **Ejercicios de pair programming Módulo 1**\n",
+    "## **Lección 13**\n",
+    "### **Python + SQL 1**\n",
+    "\n",
+    "---\n"
    ]
   },
   {
